global: apply avatar bg tweaks globally

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -647,7 +647,7 @@
                 /// Remove borders.
                 &::after, > div:last-child { border: none }
                 /// Avatar background.
-                [style *= 'height: 49px'] { c: 0 0 bd }
+                /[style *= 'height: 49px'] { c: 0 0 bd }
                 /// Text.
                 > div:last-child {
                     /// Title/timestamp.
@@ -737,7 +737,6 @@
                     .r7sRK { c: ac 0 hl }
                     ._8-yzK { c: 0 0 t }
                     ._2DxRd, ._2WP9Q { c: 0 t }
-                    [style *= 'height: 49px'] { c: 0 0 bd }
                 }
             }
             /// New chat.
