modals: fix header bg when viewing user avatars

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -383,7 +383,7 @@
             c: 0 0 bg;
         }
         /// Header.
-        > .cGLoy {
+        > .cGLoy, .s4BtI {
             c: 0 0 bg;
             box-shadow: 0 1px bd;
             div { c: 0 0 t }
