right: fix padding for group description

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -787,6 +787,7 @@
         ._2ZVEo { padding: 14px 15px 10px }
         ._2k1Z5 { padding: 14px 15px 4px }
         ._3EN0l { padding: 14px 15px }
+        .ujWpH { padding: 14px 15px }
         ._2nQ7u, ._1goQ0 { padding: 0 }
         ._2LSbZ._2j5ir { margin-bottom: unset }
         ._1tyVr {
