global: let matched-text apply everywhere

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -640,7 +640,7 @@
             [style *= 'z-index'] > div > div[class] {
                 c: 0 0 t;
                 box-shadow: 0 1px bd;
-                .matched-text { c: ac }
+                /.matched-text:not(#z) { c: ac }
                 /// Active states.
                 &:hover, &._3mMX1 {
                     c: 0 0 hl;
