chat: resolve conflicts for messages loader

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -864,7 +864,7 @@
             > div:nth-child(2) > div:nth-child(2) span[title] { c: cm }
         }
         /// Chat -> Loader.
-        [title *= 'load']:not(a) {
+        ._2sOZc {
             c: 0 0 hl;
             box-shadow: inner, bsh;
             svg circle { stroke: green }
