chat: fix msg tails for stickers in specific cases

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1008,7 +1008,7 @@
                 }
                 /// Fix bubble radius.
                 if ( msg_tails != 1 ) {
-                    ._2Hp95._1X6iJ ._3Mf7Z { rad: 7.5px }
+                    :not(.tail) > div > ._2Hp95._1X6iJ ._3Mf7Z { rad: 7.5px }
                 }
             }
             /// Context menu -> Images and forwarded messages.
