--- a/wa.user.styl
+++ b/wa.user.styl
@@ -817,6 +817,12 @@
         /// Search -> Msg content/date.
         span[title] > span[dir] { c: fg }
         ._0LqQ { c: cm }
+        /// Starred messages header.
+        header._3jHKU {
+            height: 59px;
+            c: 0 0 hl;
+            box-shadow: inset 0 -1px bd;
+        }
         /// Media/Links/Docs -> Selected header.
         .yrOIH {
             c: 0 0 bg;
