--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -1101,8 +1101,7 @@
   /* Emoji-wanna-be-round. */
   .emojik {
     opacity: var(--emojiOpacity);
-    transition: transform 200ms cubic-bezier(0.59, 0.57, 0.39, 1.04);
-    clip-path: circle(47%) !important; }
+    transition: transform 200ms cubic-bezier(0.59, 0.57, 0.39, 1.04); }
     /* Selected emoji. */
     .emojik:focus, .emojik:hover, .emojik.selected {
       box-shadow: none !important;
@@ -1126,6 +1125,108 @@
     /* Quick replies. #56 */
       ._1omcu._2saG0, ._2saG0 {
         background-color: var(--darker) !important; }
+  .emojik.wa.b0 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/0.webp")}
+  .emojik.wa.b1 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/1.webp")}
+  .emojik.wa.b2 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/2.webp")}
+  .emojik.wa.b3 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/3.webp")}
+  .emojik.wa.b4 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/4.webp")}
+  .emojik.wa.b5 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/5.webp")}
+  .emojik.wa.b6 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/6.webp")}
+  .emojik.wa.b7 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/7.webp")}
+  .emojik.wa.b8 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/8.webp")}
+  .emojik.wa.b9 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/9.webp")}
+  .emojik.wa.b10 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/10.webp")}
+  .emojik.wa.b11 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/11.webp")}
+  .emojik.wa.b12 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/12.webp")}
+  .emojik.wa.b13 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/13.webp")}
+  .emojik.wa.b14 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/14.webp")}
+  .emojik.wa.b15 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/15.webp")}
+  .emojik.wa.b16 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/16.webp")}
+  .emojik.wa.b17 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/17.webp")}
+  .emojik.wa.b18 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/18.webp")}
+  .emojik.wa.b19 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/19.webp")}
+  .emojik.wa.b20 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/20.webp")}
+  .emojik.wa.b21 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/21.webp")}
+  .emojik.wa.b22 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/22.webp")}
+  .emojik.wa.b23 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/23.webp")}
+  .emojik.wa.b24 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/24.webp")}
+  .emojik.wa.b25 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/25.webp")}
+  .emojik.wa.b26 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/26.webp")}
+  .emojik.wa.b27 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/27.webp")}
+  .emojik.wa.b28 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/28.webp")}
+  .emojik.wa.b29 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/29.webp")}
+  .emojik.wa.b30 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/30.webp")}
+  .emojik.wa.b31 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/31.webp")}
+  .emojik.wa.b32 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/32.webp")}
+  .emojik.wa.b33 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/33.webp")}
+  .emojik.wa.b34 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/34.webp")}
+  .emojik.wa.b35 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/35.webp")}
+  .emojik.wa.b36 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/36.webp")}
+  .emojik.wa.b37 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/37.webp")}
+  .emojik.wa.b38 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/38.webp")}
+  .emojik.wa.b39 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/39.webp")}
+  .emojik.wa.b40 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/40.webp")}
+  .emojik.wa.b41 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/41.webp")}
+  .emojik.wa.b42 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/42.webp")}
+  .emojik.wa.b43 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/43.webp")}
+  .emojik.wa.b44 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/44.webp")}
+  .emojik.wa.b45 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/45.webp")}
+  .emojik.wa.b46 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/46.webp")}
+  .emojik.wa.b47 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/47.webp")}
+  .emojik.wa.b48 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/48.webp")}
+  .emojik.wa.b49 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/49.webp")}
+  .emojik.wa.b50 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/50.webp")}
+  .emojik.wa.b51 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/51.webp")}
+  .emojik.wa.b52 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/52.webp")}
+  .emojik.wa.b53 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/53.webp")}
+  .emojik.wa.b54 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/54.webp")}
+  .emojik.wa.b55 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/55.webp")}
+  .emojik.wa.b56 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/56.webp")}
+  .emojik.wa.b57 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/57.webp")}
+  .emojik.wa.b58 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/58.webp")}
+  .emojik.wa.b59 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/59.webp")}
+  .emojik.wa.b60 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/60.webp")}
+  .emojik.wa.b61 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/61.webp")}
+  .emojik.wa.b62 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/62.webp")}
+  .emojik.wa.b63 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/63.webp")}
+  .emojik.wa.b64 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/64.webp")}
+  .emojik.wa.b65 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/65.webp")}
+  .emojik.wa.b66 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/66.webp")}
+  .emojik.wa.b67 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/67.webp")}
+  .emojik.wa.b68 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/68.webp")}
+  .emojik.wa.b69 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/69.webp")}
+  .emojik.wa.b70 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/70.webp")}
+  .emojik.wa.b71 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/71.webp")}
+  .emojik.wa.b72 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/72.webp")}
+  .emojik.wa.b73 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/73.webp")}
+  .emojik.wa.b74 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/74.webp")}
+  .emojik.wa.b75 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/75.webp")}
+  .emojik.wa.b76 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/76.webp")}
+  .emojik.wa.b77 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/77.webp")}
+  .emojik.wa.b78 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/78.webp")}
+  .emojik.wa.b79 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/79.webp")}
+  .emojik.wa.b80 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/80.webp")}
+  .emojik.wa.b81 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/81.webp")}
+  .emojik.wa.b82 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/82.webp")}
+  .emojik.wa.b83 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/83.webp")}
+  .emojik.wa.b84 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/84.webp")}
+  .emojik.wa.b85 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/85.webp")}
+  .emojik.wa.b86 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/86.webp")}
+  .emojik.wa.b87 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/87.webp")}
+  .emojik.wa.b88 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/88.webp")}
+  .emojik.wa.b89 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/89.webp")}
+  .emojik.wa.b90 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/90.webp")}
+  .emojik.wa.b91 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/91.webp")}
+  .emojik.wa.b92 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/92.webp")}
+  .emojik.wa.b93 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/93.webp")}
+  .emojik.wa.b94 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/94.webp")}
+  .emojik.wa.b95 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/95.webp")}
+  .emojik.wa.b96 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/96.webp")}
+  .emojik.wa.b97 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/97.webp")}
+  .emojik.wa.b98 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/98.webp")}
+  .emojik.wa.b99 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/99.webp")}
+  .emojik.wa.b100 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/100.webp")}
+  .emojik.wa.b101 {background-image: url("https://raw.githubusercontent.com/vednoc/wae/master/i/101.webp")}
 
 
   /* Backdrop. */
