--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -5,7 +5,7 @@
 @homepageURL  https://github.com/vednoc/onyx
 @supportURL   https://github.com/vednoc/onyx/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/onyx/master/WhatsApp.user.css
-@version      1.5.3
+@version      1.6.0
 @author       vednoc
 @license      MIT
 @preprocessor uso
@@ -241,9 +241,9 @@
     --hover-delay: /*[[hoverDelay]]*/;
     --image: url(https://media.discordapp.net/attachments/310799529161129984/417408747812552715/zilesanamin.jpg);
     --emojiOpacity: /*[[emojiOpacity]]*/;
-    --version: "WhatsApp by Mew v1.5.3";
-    --message: "Updated on 11th of October. Fixed bubbles once again. ";
     --ui-font: /*[[customFonts]]*/ sans-serif;
+    --version: "WhatsApp by Mew v1.6.0";
+    --message: "Updated on 8th of November. Transparent emoji backgrounds are here!!! ";
     --changes: "See the changelog at: https://github.com/vednoc/onyx/releases";
   }
 
