Add Background Image Locally

--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -239,7 +239,7 @@
     --mgreen: /*[[mgreen]]*/;
     --mblue: /*[[mblue]]*/;
     --hover-delay: /*[[hoverDelay]]*/;
-    --image: url(https://media.discordapp.net/attachments/310799529161129984/417408747812552715/zilesanamin.jpg);
+    --image: url(images/zilesanamin.jpg);
     --emojiOpacity: /*[[emojiOpacity]]*/;
     --ui-font: /*[[customFonts]]*/ sans-serif;
     --version: "WhatsApp by Mew v1.6.0";
