--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -239,7 +239,7 @@
     --mgreen: /*[[mgreen]]*/;
     --mblue: /*[[mblue]]*/;
     --hover-delay: /*[[hoverDelay]]*/;
-    --image: url(images/zilesanamin.jpg);
+    --image: url(https://raw.githubusercontent.com/vednoc/onyx/master/images/background.jpg);
     --emojiOpacity: /*[[emojiOpacity]]*/;
     --ui-font: /*[[customFonts]]*/ sans-serif;
     --version: "WhatsApp by Mew v1.6.0";
