chat: add styles for a shared contact embed

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -987,6 +987,17 @@
             > * { c: cm }
             > :first, > :last { &-child { c: fg }}
         }
+        /// Embeds -> Shared contact.
+        ._1ikYm {
+            div[style *= 'base64'] { filter: none i }
+            ._2LRBk { c: fg }
+            ._3fnHB { c: cm }
+            ._1PENu { c: 0 bg }
+            [role = 'button'] {
+                c: ac;
+                &:hover { opacity: 0.8 }
+            }
+        }
     }
 
     // Main -> Chat message bubbles.
