--- a/wa.user.styl
+++ b/wa.user.styl
@@ -780,7 +780,7 @@
                     c: 0 0 bd;
                 }
                 &::after { content: none }
-                &._1lakC, &._2nA3s { c: 0 0 hl }
+                &._1lakC, &._2nA3s, &._2V_Wj { c: 0 0 hl }
                 ._2V2qB, .jLybP::before { c: cm }
             }
         }
