left: reset tails and bubbles

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -782,6 +782,11 @@
                 &::after { content: none }
                 &._1lakC, &._2nA3s, &._2V_Wj { c: 0 0 hl }
                 ._2V2qB, .jLybP::before { c: cm }
+                /// Reset tails.
+                .tail {
+                    &, > div[class] { rad: 7.5px i }
+                    &-container { display: none i }
+                }
             }
         }
     }
