left: fix selectors for typing indicator

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -269,8 +269,8 @@
             }
         }
 
-        /// Global -> Typing indicator.
-        span[title *= 'typing'], ._315-i { &:not(#z) { c: ac }}
+        /// Left -> Typing indicator.
+        span[title *= 'typing...'], ._2ZAIy { c: ac }
 
         /// Global -> Checkboxes.
         ._1Zo-R { c: 0 bd hl }
