chat: tweak context menu for msg with images

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1095,6 +1095,8 @@
                 }
                 /// Stickers.
                 &._2PpWQ > div[style *= 'opacity'] { c: 0 0 left }
+                /// Images.
+                &._20WGU { background: linear-gradient(30deg, t 65%, #44444455 120%) i }
             }
             /// Replies.
             ._2HTIU { c: 0 0 right }
@@ -1122,6 +1124,8 @@
                 }
                 /// Stickers.
                 &._2PpWQ div[style *= 'opacity'] { c: 0 0 right }
+                /// Images.
+                &._20WGU { background: linear-gradient(30deg, t 65%, #44444455 120%) i }
             }
             /// Replies.
             ._2HTIU { c: 0 0 left }
