chat: fix styles for deleted message

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -951,6 +951,11 @@
                 div > div:nth-child(2) span { c: cm }
                 div > div:nth-child(3) span { c: fg }
             }
+            /// Deleted message.
+            ._3uHCS {
+                c: cm;
+                [data-icon] path { fill: cm }
+            }
         }
         /// Feat -> Blur img/videos.
         if ( chat_b_img == 1 ) {
