chat: fix link embed background in reply section

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1259,7 +1259,7 @@
             /// Content.
             > div:first-child:not(#z) {
                 margin-bottom: 5px i;
-                c: 0 0 t;
+                c: 0 0 hl;
                 div[role] { c: 0 0 hl }
                 /.quoted-mention { c: cm }
             }
