--- a/wa.user.styl
+++ b/wa.user.styl
@@ -861,6 +861,7 @@
             height: 59px;
             c: 0 0 hl;
             box-shadow: inset 0 -1px bd;
+            div { c: fg }
         }
         /// Media/Links/Docs -> Selected header.
         .yrOIH {
