chat: tweak background colors for embedded links

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -968,7 +968,6 @@
             }
             /// Rich embeds.
             ._1SsXF {
-                c: 0 0 sh;
                 div > div:nth-child(1) span { c: fg }
                 div > div:nth-child(2) span { c: cm }
                 div > div:nth-child(3) span { c: fg }
@@ -1145,7 +1144,7 @@
                 &._20WGU { background: linear-gradient(30deg, t 65%, #44444455 120%) i }
             }
             /// Replies.
-            ._2HTIU { c: 0 0 right }
+            ._2HTIU { c: 0 0 bg }
             /// Feat -> Align left bubble.
             if ( chat_left == 1 ) { justify-content: flex-end }
         }
@@ -1176,7 +1175,7 @@
                 &._20WGU { background: linear-gradient(30deg, t 65%, #44444455 120%) i }
             }
             /// Replies.
-            ._2HTIU { c: 0 0 left }
+            ._2HTIU { c: 0 0 bg }
             /// Feat -> Align right bubble.
             if ( chat_right == 1 ) { justify-content: flex-start }
         }
