chat: use pure white color for new msg indicators

--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -445,7 +445,7 @@
 
   /* New message indicator. */
   #side .P6z4j {
-    color: var(--lighter) !important;
+    color: white !important;
     background-color: var(--accent) !important; }
 
 
