meta: change author tag to use GitHub URL

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -5,7 +5,7 @@
 @homepageURL  https://github.com/vednoc/onyx
 @supportURL   https://github.com/vednoc/onyx/issues
 @version      1.9.9
-@author       vednoc <vednoc@pm.me> (https://gitlab.com/vednoc)
+@author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
 @license      MIT
 @preprocessor stylus
 
