global: add styles for native select element

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -178,6 +178,10 @@
         ::placeholder { c: cm }
         a { color: ac }
         strong { c: fg }
+        select {
+            c: fg bd;
+            /.Fzl83 { margin-right: 24px }
+        }
 
         /// Browser-specific resets.
         ::-moz-range {
