settings: fix text color for app version

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -813,6 +813,8 @@
                     &-container { display: none i }
                 }
             }
+            /// Version info.
+            ._357v7 { c: fg }
         }
     }
 
