right: fix pane width and add reset for msg info

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -342,6 +342,8 @@
                     height: 100%;
                 }
             }
+            /// Right -> Fix the width with three open panes.
+            &.three > ._37f_5 { width: calc(100% + 1px) }
         }
     }
 
@@ -846,6 +848,12 @@
         ._1tyVr {
             padding: 0 15px;
             width: auto;
+        }
+        /// Right -> Message info reset.
+        &._1KDYa {
+            ._2UaNq:not(#z):not(#x) {
+                &:hover { c: 0 0 t }
+            }
         }
         /// Message info -> Image.
         ._2rGVQ {
