chat: fix text color for forwarded msg indicator

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -970,6 +970,8 @@
                     div { c: 0 white }
                 }
             }
+            /// Forwarded message.
+            /._8fE-g { c: cm }
             /// X unread messages.
             ._3Xx0y {
                 c: fg bd hl;
