chat: make styles for shared contact embed global

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1037,7 +1037,7 @@
             > :first, > :last { &-child { c: fg }}
         }
         /// Embeds -> Shared contact.
-        ._1ikYm {
+        /._1ikYm {
             div[style *= 'base64'] { filter: none i }
             ._2LRBk { c: fg }
             ._3fnHB { c: cm }
