left: reset background for avatars in starred msg

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -814,6 +814,10 @@
                     &, > div[class] { rad: 7.5px i }
                     &-container { display: none i }
                 }
+                /// Reset avatars.
+                [style *= 'height: 26px; width: 26px'] {
+                    c: 0 0 t;
+                }
             }
             /// Version info.
             ._357v7 { c: fg }
