--- a/wa.user.styl
+++ b/wa.user.styl
@@ -297,8 +297,11 @@
         /// Global -> Active buttons.
         ._3j8Pd { &.GPmgF, &.GPmgf { c: 0 0 hl }}
 
-        /// Contacts -> Loader.
-        svg[width = '18'][height = '18'] circle { stroke: green }
+        /// Contacts/Search -> Loader.
+        svg[width = '18'][height = '18'],
+        svg[width = '20'][height = '20'] {
+            circle { stroke: green }
+        }
 
         /// Panes -> Change avatars.
         ._1JS2G { c: fg 0 #66666666 }
