global: add styles for 'archived chat' badges

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -413,6 +413,11 @@
         }
     }
 
+    // Global -> Badges.
+    ._2WwbV {
+        c: cm bd bg;
+    }
+
     /// Global -> Modals.
     .overlay {
         c: 0 0 t;
