global: fix selector conflict with emoji picker

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -383,8 +383,7 @@
     }
 
     /// Global -> Emoji picker popout.
-    // ._342qq._1mTBR {
-    ._342qq {
+    ._342qq._1mTBR {
         rad: r i;
         box-shadow: bsh;
         /// Header.
