landing: fix 'keep me signed in' alert
Work for #59.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -233,6 +233,12 @@
                     c: 0 0 t;
                     img { opacity: 0.3 }
                 }
+                /// 'Keep me signed in' reported in #59.
+                ._152b1 {
+                    c: white 0 ac;
+                    box-shadow: bsh;
+                    &::before { border-bottom-color: ac }
+                }
             }
         }
 
