chat: fix styles in emoji race selection menu

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -643,6 +643,16 @@
                 padding: 10px;
                 .Ijb1Q::after { box-shadow: 0 4px 8px sh }
             }
+            /// Emojis -> Race selection.
+            > ul._3z3lc {
+                > li:first-child { c: 0 bd }
+                + [data-animate-dropdown-nib] {
+                    border-bottom: 1px solid bd;
+                    border-right: 1px solid bd;
+                    bottom: -8px;
+                    c: 0 0 bg;
+                }
+            }
         }
     }
 
