left: make the rule for msg content/date global

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -907,7 +907,7 @@
         }
         /// Search -> Msg content/date.
         span[title] > span[dir] { c: fg }
-        ._0LqQ { c: cm }
+        /._0LqQ { c: cm }
         /// Starred messages header.
         header._3jHKU {
             height: 59px;
