chat: tweak the colors of system messages

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -967,15 +967,16 @@
             box-shadow: inner, bsh;
             svg circle { stroke: green }
         }
-        /// Chat -> System notes.
+        /// Chat -> System messages.
         .a7otO {
             opacity: 0.95;
             letter-spacing: 0;
+            font-weight: 600;
             text-shadow: none;
-            c: white 0 blue;
+            c: fg 0 hl;
             box-shadow: inset 0 -3px sh;
-            &.S-bQb { c: 0 0 orange }
-            &:not(.tail) { c: 0 0 green }
+            &.S-bQb { c: orange }
+            &:not(.tail) { c: green }
         }
         /// Chat -> Jump to new messages.
         ._3KRbU {
