global: add reset for text in pane headers

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -760,10 +760,12 @@
                 min-height: unset i;
                 border-bottom: 1px solid bd;
                 c: 0 0 hl;
-                /// NOTE: Reset text position.
-                ._1pYs5 {
+                /// Global -> Reset header text.
+                /._1pYs5:not(#z) {
                     margin: 0;
                     padding-top: 4px;
+                    font-size: 18px;
+                    font-weight: 500;
                 }
                 .kyJvR {
                     height: 58px;
