--- a/wa.user.styl
+++ b/wa.user.styl
@@ -504,6 +504,22 @@
                 + div { c: fg }
             }
         }
+        /// Settings -> Upload a new avatar.
+        [data-animate-modal-body] {
+            ._1BdTk { border-left: none }
+            /// Canvas background.
+            ._3979j { c: 0 0 t }
+            /// Buttons.
+            ._1DKwn {
+                c: 0 0 hl;
+                box-shadow: bsh;
+            }
+            /// Footer.
+            ._22aOT {
+                c: 0 0 hl;
+                box-shadow: inset 0 1px bd;
+            }
+        }
     }
 
     // Global -> Status.
