modals: resolve a conflict with header background

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -447,6 +447,12 @@
             /// Text.
             .xD91K { c: cm }
             ._3H4MS { c: fg }
+            /// Media -> Fix header background hover conflict.
+            ._2UaNq {
+                &._3Ff9z, &._1k-OW {
+                    &:not(#z):not(#x):hover { c: 0 0 t }
+                }
+            }
         }
         /// Previous/next buttons.
         ._3yth3:not(#z) {
