--- a/wa.user.styl
+++ b/wa.user.styl
@@ -824,7 +824,7 @@
                 > div:last-child { c: 0 t }
                 ._6xQdq { c: fg }
             }
-            ._1qWhd { c: cm }
+            /.wjdTm, ._1qWhd { c: cm }
             /// New group.
             ._1w-mX {
                 c: 0 0 t;
@@ -934,7 +934,7 @@
         span[title] > span[dir] { c: fg }
         /._0LqQ { c: cm }
         /// Starred messages header.
-        header._3jHKU {
+        .BfrqJ > header._3jHKU {
             height: 59px;
             c: 0 0 hl;
             box-shadow: inset 0 -1px bd;
