--- a/wa.user.styl
+++ b/wa.user.styl
@@ -192,6 +192,10 @@
             /// Progress completed.
             ../ ._1N8Pv { c: 0 0 ac }
         }
+        ::-webkit-slider {
+            &-runnable-track { c: 0 0 bg }
+            &-thumb { c: 0 0 ac }
+        }
         ::-webkit-scrollbar {
             &-track { background-color: #5552 }
             &-thumb { background-color: ac }
