icons: use matching to select all missed events

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -645,7 +645,7 @@
         }
         /// Delete chat/missed call.
         &[data-icon = 'delete-danger'],
-        &[data-icon = 'miss'] {
+        &[data-icon ^= 'miss'] {
             path { v: red }
         }
         /// Right -> Default avatar loader.
