chat: tweak background color of attached files

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1052,7 +1052,7 @@
             }
             /// Attached files.
             a[title] {
-                > ._1mrMQ { c: fg 0 sh }
+                > ._1mrMQ { c: fg 0 bg }
                 + div { &, > span::before { c: cm }}
             }
             /// Rich embeds.
