--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1030,11 +1030,20 @@
             /// Chat -> Select messages.
             &._2AqZl {
                 c: 0 0 t;
+                [class *= 'message-'] { position: relative }
                 /// Selected messages.
                 .qTFAl {
+                    /// Pseudo-background.
+                    &::before {
+                        content: '';
+                        opacity: 0.6;
+                        position: absolute;
+                        top: 0; left: 0; bottom: 0; right: 0;
+                    }
+                    /// States.
                     &:hover, &._3Z2tD {
-                        opacity: 0.5 i;
-                        c: 0 0 hl;
+                        c: 0 0 t;
+                        &::before { c: 0 0 hl }
                     }
                 }
                 /// Checkboxes.
