modals: fix skeleton colors when using drag'n'drop

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1312,6 +1312,12 @@
                 &::after { c: 0 0 ac }
             }
         }
+        /// Upload skeleton.
+        /.lC2xi {
+            c: 0 0 bg;
+            ._8C3uJ { c: fg bd }
+            ~ .NeQRT { c: 0 0 bg }
+        }
     }
 
     // Main -> Chat input.
