modals: fix styles for help and send/view contacts

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -468,6 +468,8 @@
                 }
             }
         }
+        /// Footer.
+        ._21bWq { c: 0 0 hl }
         /// Previous/next buttons.
         ._3yth3:not(#z) {
             c: 0 0 bg;
@@ -540,6 +542,22 @@
                 box-shadow: inset 0 1px bd;
             }
         }
+        /// View contact.
+        ._1VwzF {
+            c: 0 0 t;
+            ._1VI-m { c: fg }
+            [role = 'button'] { c: 0 0 ac }
+        }
+        /// Send/view contacts.
+        .WOXAS, ._1v8mQ {
+            c: 0 0 t;
+            box-shadow: 0 1px bd i ;
+            .fwByR { c: ac }
+        }
+        /// Settings -> Help.
+        ._1wt6r { c: cm }
+        ._3hnO5 { c: 0 ac }
+        ._1T8rb { c: ac 0 t }
     }
 
     // Global -> Status.
@@ -1295,7 +1313,7 @@
             c: 0 0 hl;
         }
         /// Buttons.
-        [role = 'button'] {
+        /[role = 'button'] {
             + ._2sn3C { c: 0 0 hl }
             /// Send.
             &._1g8sv {
