global: fix colors for the native option element

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -183,6 +183,7 @@
             c: fg bd;
             /.Fzl83 { margin-right: 24px }
         }
+        option { c: fg 0 bd }
 
         /// Browser-specific resets.
         ::-moz-range {
