left: disable border fix when three panes are active

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -370,7 +370,7 @@
             /// Right -> Fix the width with three open panes.
             &.three > ._37f_5 { width: calc(100% + 1px) }
             /// Left -> Add missing borders to some panes.
-            &.three ._2t4Ic { border-right: 1px solid bd }
+            // &.three ._2t4Ic { border-right: 1px solid bd }
         }
     }
 
